API doc for API POST /api/v1/user/auth/sign_up
